refactor: update CORS configuration and database settings for development