@@ -1,14 +1,7 @@
 package com.financas.assembly.config;
 
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-import java.util.Arrays;
-import java.util.List;
 
 /**
  * CORS configuration for cross-origin requests.
@@ -31,18 +24,18 @@ public class CorsConfig {
     @Value("${cors.max-age}")
     private long maxAge;
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins));
-        configuration.setAllowedMethods(Arrays.asList(allowedMethods));
-        configuration.setAllowedHeaders(List.of(allowedHeaders));
-        configuration.setAllowCredentials(allowCredentials);
-        configuration.setMaxAge(maxAge);
+    // @Bean
+    // public CorsConfigurationSource corsConfigurationSource() {
+    //     CorsConfiguration configuration = new CorsConfiguration();
+    //     configuration.setAllowedOrigins(Arrays.asList(allowedOrigins));
+    //     configuration.setAllowedMethods(Arrays.asList(allowedMethods));
+    //     configuration.setAllowedHeaders(List.of(allowedHeaders));
+    //     configuration.setAllowCredentials(allowCredentials);
+    //     configuration.setMaxAge(maxAge);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
-        return source;
-    }
+    //     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+    //     source.registerCorsConfiguration("/**", configuration);
+    //     return source;
+    // }
 
 }
